[gd_scene load_steps=34 format=3 uid="uid://vmg6rx2rb4c"]

[ext_resource type="Script" path="res://Scripts/Enemy/mob_attack.gd" id="1_8cy1h"]
[ext_resource type="Script" path="res://Scripts/Damageable.gd" id="2_jbnuy"]
[ext_resource type="Texture2D" uid="uid://chhhibvhjhsib" path="res://Assets/enemy/goblin.png" id="3_6gxnb"]
[ext_resource type="Script" path="res://Scripts/CharacterStateMachine.gd" id="3_ty468"]
[ext_resource type="Script" path="res://Scripts/State.gd" id="4_q6t72"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyRunState.gd" id="5_yma5o"]
[ext_resource type="Script" path="res://Scripts/Hit.gd" id="6_1kiu0"]
[ext_resource type="Script" path="res://Scripts/TrackingState.gd" id="7_1qul2"]
[ext_resource type="Script" path="res://Scripts/Sword.gd" id="7_pdeid"]
[ext_resource type="Script" path="res://Scripts/Enemy/AttackPlayer.gd" id="8_7cfo8"]
[ext_resource type="Script" path="res://Scripts/FacingCollisionShape2D.gd" id="8_acudm"]
[ext_resource type="Script" path="res://Scripts/Enemy/HitArea.gd" id="10_4joa8"]
[ext_resource type="Script" path="res://Scripts/Enemy/PlayerEnter.gd" id="12_nshis"]
[ext_resource type="Script" path="res://Scripts/StateDebug.gd" id="14_6wpra"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3omt6"]
radius = 4.0
height = 20.0

[sub_resource type="Animation" id="Animation_hy5jh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8i0i2"]
resource_name = "attack"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6gxnb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.23, 1.212)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}

[sub_resource type="Animation" id="Animation_v2maj"]
resource_name = "dead"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6gxnb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.03475, 1.02038)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 5)]
}

[sub_resource type="Animation" id="Animation_x71hg"]
resource_name = "idle"
length = 0.35
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6gxnb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.035, 1.02)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 5)]
}

[sub_resource type="Animation" id="Animation_xa4qq"]
resource_name = "run"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6gxnb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.292, 1.273)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -4.275)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjvad"]
_data = {
"RESET": SubResource("Animation_hy5jh"),
"attack": SubResource("Animation_8i0i2"),
"dead": SubResource("Animation_v2maj"),
"idle": SubResource("Animation_x71hg"),
"run": SubResource("Animation_xa4qq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bf0xj"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lau5x"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ugoy2"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0rcri"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xh74u"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_my105"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6lnl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kql3"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pp6fs"]
states/attack/node = SubResource("AnimationNodeAnimation_bf0xj")
states/attack/position = Vector2(515, 50)
states/dead/node = SubResource("AnimationNodeAnimation_lau5x")
states/dead/position = Vector2(626, 114)
states/idle/node = SubResource("AnimationNodeAnimation_ugoy2")
states/idle/position = Vector2(380, 43)
states/run/node = SubResource("AnimationNodeAnimation_0rcri")
states/run/position = Vector2(318, 114)
transitions = ["Start", "run", SubResource("AnimationNodeStateMachineTransition_xh74u"), "run", "dead", SubResource("AnimationNodeStateMachineTransition_my105"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_m6lnl"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_0kql3")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0p4n1"]
size = Vector2(10.2656, 13.1719)

[sub_resource type="CircleShape2D" id="CircleShape2D_3ap57"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iedet"]
radius = 41.9762

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("body")]
position = Vector2(56, 96)
collision_layer = 4
script = ExtResource("1_8cy1h")
body = NodePath("Body")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_3omt6")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_jbnuy")
health = 50.0

[node name="Body" type="Node2D" parent="."]
visibility_layer = 4

[node name="Sprite2D" type="Sprite2D" parent="Body"]
position = Vector2(1, -1)
scale = Vector2(-1.23, 1.212)
texture = ExtResource("3_6gxnb")
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
libraries = {
"": SubResource("AnimationLibrary_wjvad")
}

[node name="AnimationTree" type="AnimationTree" parent="Body"]
tree_root = SubResource("AnimationNodeStateMachine_pp6fs")
anim_player = NodePath("../AnimationPlayer")

[node name="CharacterStateMachine" type="Node" parent="Body" node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_ty468")
character = NodePath("../..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Run")

[node name="Run" type="Node" parent="Body/CharacterStateMachine" node_paths=PackedStringArray("raycast", "tracking_area", "tracking_state", "check_pit")]
script = ExtResource("5_yma5o")
raycast = NodePath("../../CheckWalls")
tracking_area = NodePath("../../TrackingArea")
tracking_state = NodePath("../Tracking")
check_pit = NodePath("../../CheckPits")

[node name="Buffer" type="Timer" parent="Body/CharacterStateMachine/Run"]
wait_time = 0.5
one_shot = true

[node name="Dead" type="Node" parent="Body/CharacterStateMachine"]
script = ExtResource("4_q6t72")
can_move = false

[node name="Hit" type="Node" parent="Body/CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("6_1kiu0")
damageable = NodePath("../../../Damageable")
dead_state = NodePath("../Dead")
knockback_velocity = 150.0
return_state = NodePath("../Run")
can_move = false

[node name="Timer" type="Timer" parent="Body/CharacterStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[node name="Tracking" type="Node" parent="Body/CharacterStateMachine" node_paths=PackedStringArray("nav_agent", "fly_state", "attack_area", "attack_state")]
script = ExtResource("7_1qul2")
nav_agent = NodePath("../../NavigationAgent2D")
fly_state = NodePath("../Run")
attack_area = NodePath("../../AttackArea")
attack_state = NodePath("../Attack")

[node name="Buffer" type="Timer" parent="Body/CharacterStateMachine/Tracking"]
wait_time = 0.2
autostart = true

[node name="TrackingTimer" type="Timer" parent="Body/CharacterStateMachine/Tracking"]
wait_time = 8.0
one_shot = true

[node name="Attack" type="Node" parent="Body/CharacterStateMachine" node_paths=PackedStringArray("attack_area", "fly_state")]
script = ExtResource("8_7cfo8")
attack_area = NodePath("../../AttackArea")
fly_state = NodePath("../Run")

[node name="Attack" type="Area2D" parent="Body" node_paths=PackedStringArray("player", "facing_collision_shape")]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_pdeid")
player = NodePath("../..")
facing_collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack"]
light_mask = 0
visibility_layer = 2
position = Vector2(7.867, 4.414)
shape = SubResource("RectangleShape2D_0p4n1")
debug_color = Color(0.976471, 0, 0.419608, 0.419608)
script = ExtResource("8_acudm")
facing_left_position = Vector2(0, 8)
facing_right_position = Vector2(0, 8)

[node name="CheckPits" type="RayCast2D" parent="Body"]
position = Vector2(25, 7)
target_position = Vector2(0, 22)

[node name="CheckWalls" type="RayCast2D" parent="Body"]
position = Vector2(1, 6)
target_position = Vector2(23, 0)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Body"]
debug_enabled = true

[node name="AttackArea" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 2
script = ExtResource("10_4joa8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body/AttackArea"]
position = Vector2(-3, 3)
shape = SubResource("CircleShape2D_3ap57")

[node name="TrackingArea" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 2
script = ExtResource("12_nshis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/TrackingArea"]
shape = SubResource("CircleShape2D_iedet")

[node name="TrackingTimer" type="Timer" parent="Body/TrackingArea"]
wait_time = 5.0
one_shot = true

[node name="StateDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -16.0
offset_top = -35.0
offset_right = 24.0
offset_bottom = -12.0
script = ExtResource("14_6wpra")
state_machine = NodePath("../Body/CharacterStateMachine")

[connection signal="animation_finished" from="Body/AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Body/CharacterStateMachine/Hit/Timer" to="Body/CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="Body/CharacterStateMachine/Tracking/Buffer" to="Body/CharacterStateMachine/Tracking" method="_on_buffer_timeout"]
[connection signal="body_entered" from="Body/Attack" to="Body/Attack" method="_on_body_entered"]
[connection signal="body_entered" from="Body/AttackArea" to="Body/AttackArea" method="_on_body_entered"]
[connection signal="body_exited" from="Body/AttackArea" to="Body/AttackArea" method="_on_body_exited"]
[connection signal="body_entered" from="Body/TrackingArea" to="Body/TrackingArea" method="_on_body_entered"]
[connection signal="body_exited" from="Body/TrackingArea" to="Body/TrackingArea" method="_on_body_exited"]
[connection signal="timeout" from="Body/TrackingArea/TrackingTimer" to="Body/TrackingArea" method="_on_tracking_timer_timeout"]
